# pngquant-c

./: .gitignore  INSTALL  build.sh  config.mk  configure  pngquant.c  time.txt
lib/: libimagequant.c  pam.h  viter.c
libadvpng/: CMakeLists.txt  adv-compress.c  adv-compress.h  advpng.c  advpng.h  config.h  data.c  data.h  files.h  pngex.c  pngex.h  portable.h
libadvpng/lib/: error.c  fz.c  fz.h  xpng.c  xpng.h
libadvpng/zopfli/: zopfli.h  zopfli_lib.c
libpng-1.6.17/: Makefile  config.h  config.status  libpng-config  libpng.pc  libtool  pnglibconf.h
output/: pngquant  pngquant-centos7  pngquant-linux  pngquant-m1
zlib-1.3.1/: Makefile  adler32.lo  compress.lo  crc32.lo  deflate.lo  gzclose.lo  gzlib.lo  gzread.lo  gzwrite.lo  infback.lo  inffast.lo  inflate.lo  inftrees.lo  libz.so.1.3.1  trees.lo  uncompr.lo  zutil.lo
